frontend/src/styles/main.css
/* ... */
._layout_right_sidebar_group_item_active::before {
    content:"";
    position:absolute;
    bottom:-10px;
    left:0;
    border: 2px solid var(--color5);
    width:54px;
}
._layout_right_sidebar_group_link_active {
    color:var(--color5);
}
._layout_right_sidebar_inner_info {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    margin-bottom: 24px;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
}
._layout_right_sidebar_inner_info_box {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-flex: 1;
    -ms-flex: 1 1;
    flex: 1 1;
}
._layout_info_img {
    border-radius: 6px;
    max-width: 40px;
    height: 40px;
    -o-object-fit: cover;
    object-fit: cover;
}
._layout_right_sidebar_inner_info_box_image {
    margin:0 16px 0 0;
}
._layout_right_sidebar_inner_info_box_title {
    font-weight: 500;
    font-size: 14px;
    line-height: 1.4;
    color: var(--color6);
}
._layout_right_recommend_inner_info {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    margin-bottom: 24px;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    cursor:pointer;
}
._layout_right_sidebar_inner_info_box_para {
    font-weight: 300;
    font-size: 12px;
    line-height: 1.4;
    color: var(--color6);
}
._layout_right_recommend_inner_info_box {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}
._layout_recommend_img {
    border-radius: 6px;
    max-width: 40px;
    height: 40px;
    -o-object-fit: cover;
    object-fit: cover;
}
._layout_right_recommend_inner_info_box_image {
    margin:0 16px 0 0;
}
._layout_right_recommend_inner_info_box_title {
    font-weight: 500;
    font-size: 14px;
    line-height: 1.4;
    color: var(--color6);
}
._layout_right_recommend_inner_info_box_para {
    font-weight: 300;
    font-size: 12px;
    line-height: 1.4;
    color: var(--color6);
}
._recommend_info_link {
    background: transparent;
    border: 1px solid var(--color5);
    border-radius: 2px;
    font-weight: 500;
    font-size: 12px;
    line-height: 1.4;
    color: var(--color5);
    padding: 9px 17px;
    display: block;
    text-align: center;
    -webkit-transition: .2s all ease;
    -o-transition: .2s all ease;
    transition: .2s all ease;
}
._recommend_info_link:hover {
    color: var(--bg2);
    background: var(--color5);
}
/*-------- Custom Container -------*/
._nav_custom_container {
    width: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    padding-right: var(--bs-gutter-x,.75rem);
    padding-left: var(--bs-gutter-x,.75rem);
    -ms-flex-wrap: inherit;
    flex-wrap: inherit;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
}
._container_fluid_custom {
    width: 100%;
}
/*--- Dark Feed01 Css -----*/
._dark_wrapper ._chat_left_dropdown {
    background:var(--bg6);
    box-shadow: none;
}
._dark_wrapper ._chat_left_dropdown_link {
    color:var(--bg2);
}
._dark_wrapper ._remove_btn_dropdown {
    background:var(--bg6);
    box-shadow: none;
}
._dark_wrapper ._remove_btn_dropdown_link {
    color:var(--bg2);
}
._dark_wrapper ._comment_details {
    background: var(--bg6);
}
._dark_wrapper ._comment_name_title {
    color: var(--bg2);
}
._dark_wrapper ._comment_status_text {
    color: var(--bg2);
    opacity: 0.5;
}
._dark_wrapper ._comment_reply_list li span {
    color: var(--color5);
}
._dark_wrapper ._total_reactions {
    background: var(--bg5);
}
._dark_wrapper ._total {
    color: var(--bg2) !important;
    opacity: .7;
}
._dark_wrapper ._comment_reply_list li ._time_link {
    color: var(--color7);
}
._dark_wrapper ._top_inner_dropdown {
    background:var(--bg6);
    box-shadow:none;
}
._dark_wrapper ._top_inner_dropdown_link {
    color: var(--bg2);
}
._dark_wrapper ._top_inner_dropdown_link svg {
    stroke:var(--color5);
    opacity: 1;
}
._dark_wrapper ._main_layout{
    background:var(--bg6);
}
._dark_wrapper ._header_nav {
    background:var(--bg5);
}
._header_nav_para_dark {
    color:var(--bg2) !important;
}
._dark_wrapper ._feed_inner_area {
    background:var(--bg5);
}
._dark_wrapper ._title5 {
    color:var(--bg2);
}
._dark_wrapper ._left_inner_area_explore_link {
    color:var(--bg2);
}
._dark_wrapper ._left_inner_area_suggest_info_title {
    color:var(--bg2);
}
._dark_wrapper  ._left_inner_area_suggest_info_para {
    color:var(--bg2);
}
._dark_wrapper ._info_link {
    border:1px solid var(--color5);
    background: transparent;
    color:var(--bg2);
}
._dark_wrapper  ._left_inner_event_card{
    background:var(--bg5);
}
._dark_wrapper  ._left_inner_event_card_title {
    color:var(--bg2);
}
._dark_wrapper ._left_iner_event_bottom_link {
    border:1px solid var(--color5);
    background:transparent;
    color:var(--color5);
}
._dark_wrapper ._left_inner_area_explore_link_txt {
    border:2px solid var(--color8);
}
._dark_wrapper  ._right_inner_area_info_box_title {
    color:var(--bg2);
}
._dark_wrapper ._right_inner_area_info_box_para {
    color:var(--bg2);
}
._dark_wrapper ._right_info_btn_link {
    border:1px solid var(--color5);
    color:var(--bg2);
}
._dark_wrapper ._feed_right_inner_area_card_ppl_title {
    color:var(--bg2);
}
._dark_wrapper ._feed_right_inner_area_card_ppl_para {
    color:var(--bg2);
}
._dark_wrapper  ._feed_right_inner_area_card_ppl_side span {
    color: #7E8690;
}
/* ... */

